Fixed playlist form overflow and added favicon

--- a/src/components/Playlist/playlist.css
+++ b/src/components/Playlist/playlist.css
@@ -117,6 +117,7 @@
     #playList form input {
         max-width: 100%;
         flex: 1;
+        min-width: 0;
     }
 }
 
